# llm-inference-lab

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: endpoints.example.json
data/history/: gemma4_a10_20260413.json
legacy/: README.md  benchmark_qwopus35.py
reports/eval/: inference_leaderboard.md  inference_leaderboard_20260612.md  mock_bench_20260612.json  mock_bench_20260612.md  mock_bench_contract.json  mock_bench_contract.md
scripts/: demo_mock_bench.ps1  sample_nvidia_smi.py
src/llm_inference_lab/: __init__.py  cli.py  client.py  endpoint_registry.py
src/llm_inference_lab/bench/: __init__.py  metrics.py  mock_server.py  runner.py
src/llm_inference_lab/history/: __init__.py  import_gemma4_md.py  import_qwopus_json.py  schema.py
src/llm_inference_lab/report/: __init__.py  evidence.py  export.py  leaderboard.py
tests/: test_bench_mock.py  test_history_import.py  test_metrics.py  test_public_docs.py  test_qwopus_import.py  test_registry.py  test_report_export.py
tests/fixtures/: gemma4_perf_reference.sample.md  qwopus_bench.sample.json
